--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/qrcode": "^1.5.5",
+		"@types/throttle-debounce": "^5.0.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -32,5 +34,14 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@288-toolkit/device": "^5.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"prettier-plugin-tailwindcss": "0.6.11",
+		"qrcode": "^1.5.4",
+		"tailwindcss": "3.4.17",
+		"throttle-debounce": "^5.0.2",
+		"url-metadata": "^5.0.3"
 	}
 }
